[tool.poetry]
name = "bank_analysis"
version = "0.1.0"
description = ""
authors = ["My Name"]
readme = "README.md"
packages = [{include = "bank_analysis", from = "src"}]


[tool.poetry.dependencies]
python = "^3.13.6"
poetry-core = ">=1.0.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.18.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
namespace_packages = true
exclude = ["venv", "tests", ".venv"]
mypy_path = "src"
files = "*.py"


[tool.black]
line-length = 119
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.gitignore
    | \.idea
    | tests/
).*$
'''


[tool.isort]
line_length = 119
skip = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    ".gitignore",
    ".idea"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


[tool.coverage.run]
source = ["src"]
